# ETL-API-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  create_tables.py  db.py  docker-compose.yml  entrypoint.sh  etl.py  generate_mock_data.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
