[project]
name = "gifted-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.132.0",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "spyder-kernels>=3.1.3",
    "sqlalchemy>=2.0.46",
]
